# xplotter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
cmake/Modules/: FeatureOptionsSetup.cmake  FindQtTranslations.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/Project/: Project.cpp  Project.h
src/core/Project/MetaInfo/: MetaInfo.cpp  MetaInfo.h
src/gui/: CMakeLists.txt
src/lang/: lang.qrc
test/: CMakeLists.txt  CoreTests.cpp
